fix become-a-host next prev, remove /become-a-host/

--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -13202,7 +13202,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/floor-plan.html"
+                          href="floor-plan.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -13210,7 +13210,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/photos.html"
+                          href="photos.html"
                           class="btn-dark"
                           >Next
                         </a>
