--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -582,7 +582,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/location.html"
+                          href="location.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -590,7 +590,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/amenities.html"
+                          href="amenities.html"
                           class="btn-dark"
                           >Next
                         </a>
