--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -415,7 +415,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/price.html"
+                          href="price.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -423,7 +423,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/preview.html"
+                          href="preview.html"
                           class="btn-dark"
                           >Review your listing
                         </a>
