--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -320,7 +320,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/privacy-type.html"
+                          href="privacy-type.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -328,7 +328,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/floor-plan.html"
+                          href="floor-plan.html"
                           class="btn-dark"
                           >Next
                         </a>
