--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -422,7 +422,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/legal.html"
+                          href="legal.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
