--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -606,7 +606,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/description.html"
+                          href="description.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -614,7 +614,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/legal.html"
+                          href="legal.html"
                           class="btn-dark"
                           >Next
                         </a>
