--- a/become-a-host/privacy-type.html
+++ b/become-a-host/privacy-type.html
@@ -237,7 +237,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/property-type.html"
+                          href="property-type.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -245,7 +245,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/location.html"
+                          href="location.html"
                           class="btn-dark"
                           >Next
                         </a>
