--- a/become-a-host/property-type.html
+++ b/become-a-host/property-type.html
@@ -310,7 +310,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/property-type-group.html"
+                          href="property-type-group.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -318,7 +318,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/privacy-type.html"
+                          href="privacy-type.html"
                           class="btn-dark"
                           >Next
                         </a>
