--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -464,7 +464,7 @@ Cheerful private villa with pool</textarea
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/photos.html"
+                          href="photos.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -472,7 +472,7 @@ Cheerful private villa with pool</textarea
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/description.html"
+                          href="description.html"
                           class="btn-dark"
                           >Next
                         </a>
