--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -320,7 +320,7 @@
                     <div class="_1pblb3vf">
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/property-type-group.html"
+                          href="property-type-group.html"
                           class="_cd8zo4d w-full"
                           ><span class="_jxxpcd"
                             ><span
