--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -1190,7 +1190,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/amenities.html"
+                          href="amenities.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -1198,7 +1198,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/title.html"
+                          href="title.html"
                           class="btn-dark"
                           >Next
                         </a>
