--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -495,7 +495,7 @@
                     <div class="_7lnmui">
                       <div class="_r5r508">
                         <a
-                          href="/become-a-host/intro.html"
+                          href="intro.html"
                           aria-label="Back to previous step"
                           class="btn-link"
                           >Back
@@ -503,7 +503,7 @@
                       </div>
                       <div class="_dt53i0">
                         <a
-                          href="/become-a-host/property-type.html"
+                          href="property-type.html"
                           class="btn-dark"
                           >Next</a
                         >
