_hi9sy & explore-filter-menu__list-desc -> desc

--- a/account-settings.html
+++ b/account-settings.html
@@ -839,7 +839,7 @@
                                                     </g></svg></span
                                               ></span>
                                             </button>
-                                            <div class="explore-filter-menu__list-desc">
+                                            <div class="desc">
                                               Let our team know about concerns
                                               related to home sharing activity
                                               in your area.
