--- a/edit/about.html
+++ b/edit/about.html
@@ -501,7 +501,7 @@
                                               </div>
                                               <div
                                                 id="ABOUT_YOU_PROFILE_EDIT_LINKS-row-subtitle"
-                                                class="explore-filter-menu__list-desc"
+                                                class="desc"
                                               >
                                                 PH
                                               </div>
