--- a/edit/what.html
+++ b/edit/what.html
@@ -800,7 +800,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       </g></svg></span
                                                 ></span>
                                               </button>
-                                              <div class="explore-filter-menu__list-desc">Other</div>
+                                              <div class="desc">Other</div>
                                             </div>
                                           </div>
                                         </div>
@@ -864,7 +864,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       </g></svg></span
                                                 ></span>
                                               </button>
-                                              <div class="explore-filter-menu__list-desc">Filipino</div>
+                                              <div class="desc">Filipino</div>
                                             </div>
                                           </div>
                                         </div>
