--- a/places.html
+++ b/places.html
@@ -16649,7 +16649,7 @@
                                         <div>Malibu, CA</div>
                                         <div>Eastern Malibu</div>
                                       </div>
-                                      <div class="explore-filter-menu__list-desc">
+                                      <div class="desc">
                                         <a
                                           rel="noopener noreferrer"
                                           target="_blank"
