--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -347,7 +347,7 @@
                                                             data
                                                           </h2>
                                                         </div>
-                                                        <div class="explore-filter-menu__list-desc">
+                                                        <div class="desc">
                                                           You can make a request
                                                           to download or delete
                                                           your personal data
@@ -407,7 +407,7 @@
                                                                     </g></svg></span
                                                               ></span>
                                                             </button>
-                                                            <div class="explore-filter-menu__list-desc">
+                                                            <div class="desc">
                                                               We’ll create a
                                                               file for you to
                                                               download your
@@ -467,7 +467,7 @@
                                                                       ></path>
                                                                     </g></svg></span></span
                                                             ></a>
-                                                            <div class="explore-filter-menu__list-desc">
+                                                            <div class="desc">
                                                               This will
                                                               permanently delete
                                                               your account and
@@ -506,7 +506,7 @@
                                                             Activity sharing
                                                           </h2>
                                                         </div>
-                                                        <div class="explore-filter-menu__list-desc">
+                                                        <div class="desc">
                                                           Decide how your
                                                           profile and activity
                                                           are shown to others.
@@ -531,7 +531,7 @@
                                                         </div>
                                                         <div
                                                           id="includeInSearchEngines-switch-row-subtitle"
-                                                          class="explore-filter-menu__list-desc"
+                                                          class="desc"
                                                         >
                                                           Turning this on means
                                                           search engines, like
@@ -582,7 +582,7 @@
                                                             Data sharing
                                                           </h2>
                                                         </div>
-                                                        <div class="explore-filter-menu__list-desc">
+                                                        <div class="desc">
                                                           Decide how your data
                                                           is used for Airbnb
                                                           research.
@@ -607,7 +607,7 @@
                                                         </div>
                                                         <div
                                                           id="useDataForInclusion-switch-row-subtitle"
-                                                          class="explore-filter-menu__list-desc"
+                                                          class="desc"
                                                         >
                                                           Leaving this on means
                                                           that you’re helping us
@@ -696,7 +696,7 @@
                                                             Connected services
                                                           </h2>
                                                         </div>
-                                                        <div class="explore-filter-menu__list-desc">
+                                                        <div class="desc">
                                                           View services that
                                                           you’ve connected to
                                                           your Airbnb account
@@ -1029,7 +1029,7 @@
                                                     Manage your account data
                                                   </h2>
                                                 </div>
-                                                <div class="explore-filter-menu__list-desc">
+                                                <div class="desc">
                                                   You can make a request to
                                                   download or delete your
                                                   personal data from Airbnb.
@@ -1082,7 +1082,7 @@
                                                             </g></svg></span
                                                       ></span>
                                                     </button>
-                                                    <div class="explore-filter-menu__list-desc">
+                                                    <div class="desc">
                                                       We’ll create a file for
                                                       you to download your
                                                       personal data.
@@ -1134,7 +1134,7 @@
                                                               ></path>
                                                             </g></svg></span></span
                                                     ></a>
-                                                    <div class="explore-filter-menu__list-desc">
+                                                    <div class="desc">
                                                       This will permanently
                                                       delete your account and
                                                       your data, in accordance
@@ -1171,7 +1171,7 @@
                                                     Activity sharing
                                                   </h2>
                                                 </div>
-                                                <div class="explore-filter-menu__list-desc">
+                                                <div class="desc">
                                                   Decide how your profile and
                                                   activity are shown to others.
                                                 </div>
@@ -1194,7 +1194,7 @@
                                                 </div>
                                                 <div
                                                   id="includeInSearchEngines-switch-row-subtitle"
-                                                  class="explore-filter-menu__list-desc"
+                                                  class="desc"
                                                 >
                                                   Turning this on means search
                                                   engines, like Google, will
@@ -1242,7 +1242,7 @@
                                                     Data sharing
                                                   </h2>
                                                 </div>
-                                                <div class="explore-filter-menu__list-desc">
+                                                <div class="desc">
                                                   Decide how your data is used
                                                   for Airbnb research.
                                                 </div>
@@ -1266,7 +1266,7 @@
                                                 </div>
                                                 <div
                                                   id="useDataForInclusion-switch-row-subtitle"
-                                                  class="explore-filter-menu__list-desc"
+                                                  class="desc"
                                                 >
                                                   Leaving this on means that
                                                   you’re helping us further
@@ -1351,7 +1351,7 @@
                                                     Connected services
                                                   </h2>
                                                 </div>
-                                                <div class="explore-filter-menu__list-desc">
+                                                <div class="desc">
                                                   View services that you’ve
                                                   connected to your Airbnb
                                                   account
