--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -233,7 +233,7 @@
                                 </div>
                                 <div
                                   id="reason-GUEST_OFFER_EXTRA-row-subtitle"
-                                  class="explore-filter-menu__list-desc"
+                                  class="desc"
                                 >
                                   Expenses that weren’t included in the cost of
                                   the reservation (ex: meals, transportation
