--- a/signup_login.html
+++ b/signup_login.html
@@ -2096,7 +2096,7 @@
                                               <div>
                                                 <div id="sms-row-title" class="_gw4xx4"><span class="font-semibold">Text
                                                     message (SMS)</span></div>
-                                                <div id="sms-row-subtitle" class="_hi9sy">We'll text you a code.</div>
+                                                <div id="sms-row-subtitle" class="desc">We'll text you a code.</div>
                                               </div>
                                             </div>
                                           </div>
@@ -2130,7 +2130,7 @@
                                               <div>
                                                 <div id="whatsapp-row-title" class="_gw4xx4"><span
                                                     class="font-semibold">WhatsApp</span></div>
-                                                <div id="whatsapp-row-subtitle" class="_hi9sy">We'll send a code over
+                                                <div id="whatsapp-row-subtitle" class="desc">We'll send a code over
                                                   wifi.</div>
                                               </div>
                                             </div>
@@ -2165,7 +2165,7 @@
                                               <div>
                                                 <div id="phone_call-row-title" class="_gw4xx4"><span
                                                     class="font-semibold">Phone call</span></div>
-                                                <div id="phone_call-row-subtitle" class="_hi9sy">We'll call you with a
+                                                <div id="phone_call-row-subtitle" class="desc">We'll call you with a
                                                   code.</div>
                                               </div>
                                             </div>
@@ -5357,7 +5357,7 @@
                                               <div>
                                                 <div id="sms-row-title" class="_gw4xx4"><span class="font-semibold">Text
                                                     message (SMS)</span></div>
-                                                <div id="sms-row-subtitle" class="_hi9sy">We'll text you a code.</div>
+                                                <div id="sms-row-subtitle" class="desc">We'll text you a code.</div>
                                               </div>
                                             </div>
                                           </div>
@@ -5391,7 +5391,7 @@
                                               <div>
                                                 <div id="whatsapp-row-title" class="_gw4xx4"><span
                                                     class="font-semibold">WhatsApp</span></div>
-                                                <div id="whatsapp-row-subtitle" class="_hi9sy">We'll send a code over
+                                                <div id="whatsapp-row-subtitle" class="desc">We'll send a code over
                                                   wifi.</div>
                                               </div>
                                             </div>
@@ -5426,7 +5426,7 @@
                                               <div>
                                                 <div id="phone_call-row-title" class="_gw4xx4"><span
                                                     class="font-semibold">Phone call</span></div>
-                                                <div id="phone_call-row-subtitle" class="_hi9sy">We'll call you with a
+                                                <div id="phone_call-row-subtitle" class="desc">We'll call you with a
                                                   code.</div>
                                               </div>
                                             </div>
