--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1357,7 +1357,7 @@
                                   </div>
                                   <div
                                     id="default-private-row-subtitle"
-                                    class="explore-filter-menu__list-desc"
+                                    class="desc"
                                   >
                                     Private groups are set as your default. You
                                     can change this for specific instances.
@@ -1406,7 +1406,7 @@
                                   </div>
                                   <div
                                     id="caregiver-free-row-subtitle"
-                                    class="explore-filter-menu__list-desc"
+                                    class="desc"
                                   >
                                     Invite interpreters, caregivers, or support
                                     professionals to join the guests they’re
