--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1411,7 +1411,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                               </g></svg></span
                                         ></span>
                                       </button>
-                                      <div class="explore-filter-menu__list-desc">Alligator</div>
+                                      <div class="desc">Alligator</div>
                                     </div>
                                   </div>
                                 </div>
