--- a/personal-info.html
+++ b/personal-info.html
@@ -300,7 +300,7 @@
                                         </div>
                                         <div
                                           id="legalName-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span>Jose Angelo Ramirez</span>
                                         </div>
@@ -345,7 +345,7 @@
                                         </div>
                                         <div
                                           id="legalName-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span aria-live="polite"
                                             >This is the name on your travel
@@ -464,7 +464,7 @@
                                         </div>
                                         <div
                                           id="gender-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span>Not specified</span>
                                         </div>
@@ -509,7 +509,7 @@
                                         </div>
                                         <div
                                           id="gender-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span aria-live="polite"></span>
                                         </div>
@@ -667,7 +667,7 @@
                                         </div>
                                         <div
                                           id="email-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span>r***o@gmail.com</span>
                                         </div>
@@ -712,7 +712,7 @@
                                         </div>
                                         <div
                                           id="email-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span aria-live="polite"
                                             >Use an address you’ll always have
@@ -797,7 +797,7 @@
                                         </div>
                                         <div
                                           id="phoneNumbers-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span
                                             ><div
@@ -884,7 +884,7 @@
                                         </div>
                                         <div
                                           id="phoneNumbers-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span aria-live="polite"></span>
                                         </div>
@@ -979,7 +979,7 @@
                                         </div>
                                         <div
                                           id="personal-info-fields-identity-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           Provided
                                         </div>
@@ -1025,7 +1025,7 @@
                                           </div>
                                           <div
                                             id="address-row-subtitle"
-                                            class="explore-filter-menu__list-desc"
+                                            class="desc"
                                           >
                                             <span>Not provided</span>
                                           </div>
@@ -1070,7 +1070,7 @@
                                           </div>
                                           <div
                                             id="address-row-subtitle"
-                                            class="explore-filter-menu__list-desc"
+                                            class="desc"
                                           >
                                             <span aria-live="polite"
                                               >Use a permanent address where you
@@ -2146,7 +2146,7 @@
                                         </div>
                                         <div
                                           id="emergencyContacts-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span>Not provided</span>
                                         </div>
@@ -2191,7 +2191,7 @@
                                         </div>
                                         <div
                                           id="emergencyContacts-row-subtitle"
-                                          class="explore-filter-menu__list-desc"
+                                          class="desc"
                                         >
                                           <span aria-live="polite"
                                             >A trusted contact we can alert in
@@ -3644,7 +3644,7 @@
                                             </div>
                                             <div
                                               id="legalName-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span>Jose Angelo Ramirez</span>
                                             </div>
@@ -3689,7 +3689,7 @@
                                             </div>
                                             <div
                                               id="legalName-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span aria-live="polite"
                                                 >This is the name on your travel
@@ -3813,7 +3813,7 @@
                                             </div>
                                             <div
                                               id="gender-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span>Not specified</span>
                                             </div>
@@ -3858,7 +3858,7 @@
                                             </div>
                                             <div
                                               id="gender-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span aria-live="polite"></span>
                                             </div>
@@ -4022,7 +4022,7 @@
                                             </div>
                                             <div
                                               id="email-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span>r***o@gmail.com</span>
                                             </div>
@@ -4067,7 +4067,7 @@
                                             </div>
                                             <div
                                               id="email-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span aria-live="polite"
                                                 >Use an address you’ll always
@@ -4157,7 +4157,7 @@
                                             </div>
                                             <div
                                               id="phoneNumbers-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span
                                                 ><div
@@ -4245,7 +4245,7 @@
                                             </div>
                                             <div
                                               id="phoneNumbers-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span aria-live="polite"></span>
                                             </div>
@@ -4346,7 +4346,7 @@
                                             </div>
                                             <div
                                               id="personal-info-fields-identity-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               Provided
                                             </div>
@@ -4392,7 +4392,7 @@
                                               </div>
                                               <div
                                                 id="address-row-subtitle"
-                                                class="explore-filter-menu__list-desc"
+                                                class="desc"
                                               >
                                                 <span>Not provided</span>
                                               </div>
@@ -4437,7 +4437,7 @@
                                               </div>
                                               <div
                                                 id="address-row-subtitle"
-                                                class="explore-filter-menu__list-desc"
+                                                class="desc"
                                               >
                                                 <span aria-live="polite"
                                                   >Use a permanent address where
@@ -6060,7 +6060,7 @@
                                             </div>
                                             <div
                                               id="emergencyContacts-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span>Not provided</span>
                                             </div>
@@ -6105,7 +6105,7 @@
                                             </div>
                                             <div
                                               id="emergencyContacts-row-subtitle"
-                                              class="explore-filter-menu__list-desc"
+                                              class="desc"
                                             >
                                               <span aria-live="polite"
                                                 >A trusted contact we can alert
