--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1112,7 +1112,7 @@
                                               </g></svg></span
                                         ></span>
                                       </button>
-                                      <div class="explore-filter-menu__list-desc">Animals</div>
+                                      <div class="desc">Animals</div>
                                     </div>
                                   </div>
                                 </div>
